Opened 13 years ago
Closed 13 years ago
#3852 closed bug (fixed)
MeTOS crashing, again.
Reported by: | kvdman | Owned by: | bonefish |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Interface Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description
Binary compatibility problem. There was an older bug that was resolved (#1553) regarding MeTOS:
http://www.haikuware.com/directory/view-details/development/gui-creation/metos
but this one seems to involve CTabView, BTabView?
Tested on hrev30522.
GNU gdb 6.3 Copyright 2004 Free Software Foundation, Inc. GDB is free software, covered by the GNU General Public License, and you are welcome to change it and/or distribute copies of it under certain conditions. Type "show copying" to see the conditions. There is absolutely no warranty for GDB. Type "show warranty" for details. This GDB was configured as "i586-pc-haiku"...(no debugging symbols found) [tcsetpgrp failed in terminal_inferior: Invalid Argument] Thread 225 called debugger(): looper must be locked before proceeding Reading symbols from /boot/system/runtime_loader...done. Loaded symbols for /boot/system/runtime_loader Reading symbols from /boot/system/lib/libbe.so...done. Loaded symbols for /boot/system/lib/libbe.so Reading symbols from /boot/system/lib/libroot.so...done. Loaded symbols for /boot/system/lib/libroot.so Reading symbols from /boot/system/lib/libtracker.so...done. Loaded symbols for /boot/system/lib/libtracker.so Reading symbols from /boot/system/lib/libtranslation.so...done. Loaded symbols for /boot/system/lib/libtranslation.so Reading symbols from /boot/apps/Develop/MeTOS/lib/libMeTOS.so...done. Loaded symbols for /boot/apps/Develop/MeTOS/lib/libMeTOS.so Reading symbols from /boot/apps/Develop/MeTOS/lib/libCS.so...done. Loaded symbols for /boot/apps/Develop/MeTOS/lib/libCS.so Reading symbols from /boot/system/lib/libnetwork.so...done. Loaded symbols for /boot/system/lib/libnetwork.so Reading symbols from /boot/system/lib/libstdc++.r4.so...done. Loaded symbols for /boot/system/lib/libstdc++.r4.so Reading symbols from /boot/system/lib/libtextencoding.so...done. Loaded symbols for /boot/system/lib/libtextencoding.so Reading symbols from /boot/home/config/lib/libiconv.so...done. Loaded symbols for /boot/home/config/lib/libiconv.so Reading symbols from /boot/apps/Develop/MeTOS/AddOns/Translators/MeTOSProjectFile...done. Loaded symbols for /boot/apps/Develop/MeTOS/AddOns/Translators/MeTOSProjectFile Loaded symbols for /boot/apps/Develop/MeTOS/AddOns/Translators/MeTOSProjectFile Reading symbols from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/BePascalCodeGenerator...done. Loaded symbols for /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/BePascalCodeGenerator Reading symbols from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator...done. Loaded symbols for /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator [tcsetpgrp failed in terminal_inferior: Invalid Argument] [Switching to team /boot/apps/Develop/MeTOS/MeTOS (225) thread MeTOS (225)] 0xffff0104 in ?? () (gdb) bt #0 0xffff0104 in ?? () #1 0x004f78b6 in debugger () from /boot/system/lib/libroot.so #2 0x00323d03 in BLooper::AssertLocked () from /boot/system/lib/libbe.so #3 0x003226bc in BLooper::Unlock () from /boot/system/lib/libbe.so #4 0x0031d506 in BHandler::UnlockLooper () from /boot/system/lib/libbe.so #5 0x009840b1 in CTabView::Select () from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator #6 0x003ba8d4 in BTabView::AddTab () from /boot/system/lib/libbe.so #7 0x0097c3e5 in CPPCodeWin::CPPCodeWin () from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator #8 0x0097bfae in CPPCodeGenerator::CPPCodeGenerator () from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator #9 0x0097c12c in instantiate_VCodeGenerator () from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator #10 0x00227461 in MetosApp::LoadGenerators () #11 0x00224b24 in MetosApp::MetosApp () #12 0x002244e7 in main () (gdb) cont Continuing. Thread 225 caused an exception: Segment violation Program received signal SIGSEGV, Segmentation fault. 0x003226bc in BLooper::Unlock () from /boot/system/lib/libbe.so (gdb) bt #0 0x003226bc in BLooper::Unlock () from /boot/system/lib/libbe.so #1 0x0031d506 in BHandler::UnlockLooper () from /boot/system/lib/libbe.so #2 0x009840b1 in CTabView::Select () from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator #3 0x003ba8d4 in BTabView::AddTab () from /boot/system/lib/libbe.so #4 0x0097c3e5 in CPPCodeWin::CPPCodeWin () from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator #5 0x0097bfae in CPPCodeGenerator::CPPCodeGenerator () from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator #6 0x0097c12c in instantiate_VCodeGenerator () from /boot/apps/Develop/MeTOS/AddOns/CodeGenerators/CPPCodeGenerator #7 0x00227461 in MetosApp::LoadGenerators () #8 0x00224b24 in MetosApp::MetosApp () #9 0x002244e7 in main () (gdb)
Note:
See TracTickets
for help on using tickets.
This looks like a problem which Ingo has introduced recently.