* BTabView::AddTab(): Call Select() only when already attached to the window.   It's only necessary in this case and apparently there are applications that   rely on Select() not being called before the tab is attached to the window.   Fixes #3852. * Automatic white-space cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@30558 a95241bf-73f2-0310-859d-f6bbb57e9c96